Added the frontend scope and tested end to end

--- a/Day3/ReadMeDay3.ipynb
+++ b/Day3/ReadMeDay3.ipynb
@@ -47,7 +47,9 @@
    "source": [
     "### 1. Run the Backend Server\n",
     "\n",
-    "First, set up and start the Flask backend. These commands should be run in your first terminal."
+    "First, set up and start the Flask backend. These commands should be run in your first terminal.\n",
+    "\n",
+    "Run the below commands in terminal and not this notebook (Also remove the exclamation mark \"!\" before each command)"
    ]
   },
   {
